# rbinc

./: .gitignore  Cargo.toml  LICENSE  README.md  test-file.binc
.run/: Run server port 2525.run.xml
bid-rs/: Cargo.toml
bid-rs/src/: changes.rs  document.rs  io.rs  iowrappers.rs  lib.rs  repository.rs  revision.rs
bid-rs/tests/: tests.rs
binc/: Cargo.toml
binc/specification/: v1.md
binc/src/: attributes.rs  builder.rs  change.rs  changes.rs  client.rs  comments.rs  document.rs  id.rs  iowrappers.rs  journal.rs  lib.rs  name_dictionary.rs  network_protocol.rs  node_id.rs  node_store.rs  operation.rs  path.rs  readwrite.rs  repository.rs  revision.rs  tree.rs  util.rs
binc/test_data/: checklistfile.binc
binc/tests/: tests.rs
cli/: Cargo.toml
cli/src/: client.rs  main.rs  server.rs  store.rs
demo/: Cargo.toml
demo/src/: gui.rs  main.rs
explorer/: Cargo.toml
explorer/src/: app.rs  gui.rs  importer.rs  main.rs
gui/: Cargo.toml
gui/src/: app.rs  column.rs  explorer.rs  gui.rs  history.rs  importer.rs  lib.rs  notes.rs  persistent_client.rs  tree.rs  uiext.rs
server/: Cargo.toml
server/src/: main.rs  server.rs
src/: main.rs
