[package]
name = "binc"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
whoami = "1.3"
blake3 = "1.5.5"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
