[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[dependencies]
binc = { path = "../binc" }
egui_extras = "0.31.0"
env_logger = "0.11.6"
rfd = "0.15.2"
xml = "0.8.20"
log = "0.4.25"
whoami = "1.3"

[dependencies.eframe]
version = "0.31.0"
features = ["persistence"]

[lib]
name = "bincgui"

[[bin]]
name = "binc-explorer"
path = "src/bin/explorer.rs"

[[bin]]
name = "binc-notes"
path = "src/bin/notes.rs"

[[bin]]
name = "binc-issues"
path = "src/bin/issues.rs"